# invariant_hunt

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements-ci.txt  requirements.txt
docs/: ANALYTIC_ECHO_PREDICTION.md  ARCHIVE_PREMERGER_BULK_PE_MAPPING.md  CAMPAIGN_ECHO_MAPPING.md  GRAVITY_EMERGENCE.md  MILESTONE_ACTION_PRINCIPLE.md  MILESTONE_AMP_STRUCTURE.md  MILESTONE_ARXIV_PACKAGING.md  MILESTONE_BULK_PE_MAPPING_CLOSED.md  MILESTONE_CI_LOCKS_SCHEMA.md  MILESTONE_FALSIFY_SYSTEMATICS.md  MILESTONE_GAUGED_META_SWEEP.md  MILESTONE_GW150914_v2.md  MILESTONE_GW151226_STRESS.md  MILESTONE_GW170608_SCRUTINY.md  MILESTONE_HELD_OUT_GW170809.md  MILESTONE_HELD_OUT_TRUE_BBH.md  MILESTONE_MULTI_EVENT.md  MILESTONE_PHASE3_CLOSEOUT.md  MILESTONE_PREMERGER_EXPAND.md  MILESTONE_PREMERGER_FOLLOWUP.md  MILESTONE_PREMERGER_INJECTION.md  MILESTONE_PREMERGER_MAPPING_V2.md  MILESTONE_PREMERGER_MAPPING_V3.md  MILESTONE_PREMERGER_MAPPING_V4.md  MILESTONE_PREMERGER_MAPPING_V5.md  MILESTONE_PREMERGER_PE_ROBUST.md  MILESTONE_PREMERGER_PREDICTIVE_FREEZE.md  MILESTONE_RELATIVISTIC_COMPLETION.md  MILESTONE_SM_PARTICLE_MAPPING.md  MILESTONE_SM_RG.md  MILESTONE_SM_YUKAWA.md  MILESTONE_WHITENED_NETWORK.md  PREDICTION_MODE.md  PREMERGER_BAYES_FACTOR.md  PREMERGER_PHASE.md  PREREG_PREMERGER_MAPPING_V2.md  PREREG_PREMERGER_MAPPING_V3.md  PREREG_PREMERGER_MAPPING_V4.md  PREREG_PREMERGER_MAPPING_V5.md  falsification_criteria.md  (+2 more)
facts/: public_facts.json
papers/: GW_Burst_Threshold.tex  Gravity_Emergence.tex  Lagrangian_Derivation.tex  Makefile  README_ARXIV.md  Relativistic_Completion.tex  (+2 more)
(+97 files in other folders)
