[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invariant-hunt"
version = "0.1.0"
description = "Hunt topological/geometric invariants and turn them into falsifiable predictions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aaron" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "tqdm>=4.66",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "optuna>=3.5.0",
    "sympy>=1.12",
]

[project.optional-dependencies]
torch = ["torch>=2.1.0"]
test = ["pytest>=8.0", "pytest-cov>=5.0"]
ray = ["ray>=2.9.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
    "ci: lightweight tests safe for GitHub Actions (no PE/pycbc/torch)",
    "heavy: requires PE data, pycbc, torch, or network",
]

[tool.ruff]
line-length = 100
target-version = "py311"
